# Thoth

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.gpu  README.md  REVIEW_TODO.md  build_run.sh  docker-compose.react.yml  docker-compose.yml  format.sh  run_batch.sh  run_clients.sh  run_cluster.sh  run_docker_batch.sh  run_docker_cluster.sh  run_docker_common.sh  run_docker_server.sh  run_docker_server_gpu.sh  run_heston.sh  run_local_client.sh  run_local_client_matrix.sh  run_local_graph.sh  run_matrix.sh  run_serve.sh  run_simple_call.sh  todo-gui.md  todo.md
.claude/agents/: expert-controller.md  product-designer.md  quant-cpp-reviewer.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.dev.yml  post-create.sh
.github/workflows/: ci.yml
docs/: README.md  agent.md  architecture.md  gpu.md  gpu_mcl.md  improvement_backlog.md  monte_carlo.md  pde.md  products.md  running.md  stochastic_volatility.md  volatility.md
pricer/: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  README.md
pricer/docs/: README.md  agent.md  architecture.md  gpu.md  pde.md  products.md  volatility.md
pricer/samples/: autocallable.yaml  big_option.yaml  hull_white.yaml  lsv.yaml  matrix.yaml  multicurve.yaml  seasoned_varswap.yaml  term_correlation.yaml  termsheet.yaml
pricer/schema/: thoth.schema.json
pricer/scripts/: run_docker_server.sh
pricer/src/: thoth.hpp  yaml_config.cpp  yaml_config.hpp
pricer/tests/: CMakeLists.txt  test_aggregation.cpp  test_american.cpp  test_analytics.cpp  test_asian_ratchet.cpp  test_autocallable.cpp  test_config.cpp  test_consistency.cpp  test_determinism.cpp  test_digital.cpp  test_dividends.cpp  test_errors.cpp  test_features.cpp  test_hull_white.cpp  test_lsv.cpp  test_misc.cpp  test_multiasset.cpp  test_multicurve.cpp  test_param_greeks.cpp  test_phoenix.cpp  test_rainbow.cpp  test_relative_strike.cpp  test_seasoned_varswap.cpp  test_term_correlation.cpp  test_term_structure.cpp  test_termsheet.cpp  test_tools_finance.cpp  test_variance.cpp  test_variance_swap.cpp
samples/: bates_call.yaml  big_option.yaml  gpu_call.yaml  heston_call.yaml  matrix.yaml  matrix_gpu.yaml  random_vanillas.yaml  sabr_call.yaml  simple_call.yaml  test.yaml
schema/: thoth.schema.json
scripts/: build_run.sh  format.sh  prod-react.sh  prod.sh  run_docker_batch.sh  run_docker_common.sh  run_local_client_matrix.sh
src/: run_client.cpp  run_cluster.cpp  run_modes.hpp  thoth.cpp  thoth.hpp  yaml_config.cpp  yaml_config.hpp
src/contracts/: barrier.cpp  barrier.hpp  book.cpp  book.hpp  contract.cpp  contract.hpp  pricing_facets.hpp  valuation.hpp  vanilla.cpp  vanilla.hpp  variance_swap.cpp  variance_swap.hpp
src/core/: node_collector.cpp  node_collector.hpp  object.cpp  object.hpp  object_collector.hpp  object_manager.cpp  object_manager.hpp  object_reader.hpp  object_registry.cpp  object_sets.hpp  path_recorder.cpp
src/fixings/: simple_fixing_data.cpp  simple_fixing_data.hpp
src/helpers/: cancellation.cpp  constants.hpp  distributions.cpp  distributions.hpp  enums.hpp  finance.cpp  finance.hpp  gsl_raii.hpp  linalg.cpp  maths.cpp  maths.hpp  misc.cpp  misc.hpp  progress_bar.cpp  progress_bar.hpp  raii.hpp  rng.hpp  statistics.cpp  statistics.hpp
src/marketdata/: asset.cpp  asset.hpp  continuous_dividends_curve.cpp  continuous_dividends_curve.hpp  currency.cpp  currency.hpp  curve.cpp  curve.hpp  discrete_dividends.cpp  discrete_dividends.hpp  equity.cpp  equity.hpp  forex.cpp  forex.hpp  market_data.cpp  market_data.hpp  repo_curve.cpp  repo_curve.hpp  single.cpp  single.hpp  yield_curve.cpp  yield_curve.hpp
src/modes/: run_batch.cpp  run_cluster.cpp  run_modes.hpp  run_server.cpp
src/nodes/: absolute_basket_node.cpp  absolute_basket_node.hpp  barrier_flow_node.cpp  barrier_flow_node.hpp  book_node.cpp  book_node.hpp  brownian_node.cpp  brownian_node.hpp  composite_correl_node.cpp  composite_correl_node.hpp  composite_vol_node.cpp  composite_vol_node.hpp  constant_node.cpp  constant_node.hpp  contract_node.cpp  contract_node.hpp  correlated_noise_node.cpp  correlated_noise_node.hpp  dividend_node.cpp  dividend_node.hpp  drift_node.cpp  drift_node.hpp  heston_spot_node.cpp  heston_spot_node.hpp  heston_variance_node.cpp  heston_variance_node.hpp  jump_node.cpp  jump_node.hpp  local_volatility_node.cpp  local_volatility_node.hpp  monte_carlo_node.cpp  monte_carlo_node.hpp  node_names.hpp  nodes.hpp  noise_node.cpp  noise_node.hpp  path_generator.cpp  path_generator.hpp  product_node.cpp  product_node.hpp  (+14 more)
src/tasks/: debug_configuration.cpp  debug_configuration.hpp  historical_correlation_computation.cpp  historical_correlation_computation.hpp  historical_volatility_computation.cpp  historical_volatility_computation.hpp  mcl_configuration.cpp  mcl_configuration.hpp  mcl_gpu.cu  mcl_gpu.hpp  pde_configuration.cpp  pde_configuration.hpp  pricer.cpp  pricer.hpp  pricer_ana.cpp  pricer_ana.hpp  pricer_configuration.cpp  pricer_configuration.hpp  pricer_mcl.cpp  pricer_mcl.hpp  pricer_mcl_gpu.cpp  pricer_mcl_gpu.hpp  pricer_pde.cpp  pricer_pde.hpp  sequence.cpp  sequence.hpp  task.cpp  task.hpp
src/underlyings/: absolute_basket.cpp  absolute_basket.hpp  basket.cpp  basket.hpp  composite.cpp  composite.hpp  mono.cpp  mono.hpp  rainbow.cpp  rainbow.hpp  underlying.cpp  underlying.hpp
src/vol_correl/: bs_volatility.cpp  bs_volatility.hpp  correlation.cpp  correlation.hpp  heston_volatility.cpp  heston_volatility.hpp  sabr_volatility.cpp  sabr_volatility.hpp  volatility.cpp  volatility.hpp
tests/: helpers.hpp  main.cpp  test_aggregation.cpp  test_american.cpp  test_barrier.cpp  test_bates.cpp  test_config.cpp  test_consistency.cpp  test_determinism.cpp  test_discrete_dividends.cpp  test_dividends.cpp  test_engine_greeks.cpp  test_errors.cpp  test_european.cpp  test_features.cpp  test_maths.cpp  test_multiasset.cpp  test_param_greeks.cpp  test_pde.cpp  test_rainbow.cpp  test_repo.cpp  test_term_structure.cpp  test_variance_swap.cpp
web/: .dockerignore
web/bff/: .env.example  Dockerfile  (+4 more)
(+310 files in other folders)
